(style) fix icon alignment

--- a/client/login/styles/styles.css
+++ b/client/login/styles/styles.css
@@ -153,7 +153,6 @@ label {
   background-color: #f5f5f5;
 }
 
-<<<<<<< 56e816c359dda0643eccbc2799dd928fa10ad772
 .column.feat-column {
     float: left;
     display: flex;
@@ -163,11 +162,12 @@ label {
 .img-icon {
     margin-top: auto;
     margin-bottom: auto;
-    padding-right: 15px;
-=======
+    min-width: 65px;
+    padding-right:15px;
+}
+
 .social {
   display: inline-block !important;
->>>>>>> (fix) social icons stay on same row
 }
 
 .thumbnail {
